--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Memory Game</title>
   </head>
   <body>
-    <h1>Mack Memory Game</h1>
+    <h1>My Memory Game</h1>
     <div id="game-board" class="game-board">
     </div>
   </body>
